--- a/public/index.html
+++ b/public/index.html
@@ -97,7 +97,7 @@ $(document).ready(function(){
 
 
     <!--TWITTER BOOTSTRAP TUTORIAL</h1-->
-<div id="head" style="text-align: center;" >FoodieSsf<br>
+<div id="head" style="text-align: center;" >Food and Mood<br>
 <div id="yCarousel" >
 
 </div> <!--yCarousel-->
