--- a/public/ih/index.html
+++ b/public/ih/index.html
@@ -282,14 +282,10 @@ $(document).ready(function(){
 
     </div><!--container-->
     </div>
-
-
-
   <div class='container'>
   <!--div class='container'-->
 <!-- #content div -->
-    <!--   entersidebar heare-->
-    
+    <!--div id='content' class='row-fluid'-->
     <!--div id='content' class='row row-offcanvas row-offcanvas-right'-->
       <div class='col-sm-9 main'>
         <!--h2>Main Content Section</h2-->
