--- a/public/index.html
+++ b/public/index.html
@@ -284,12 +284,36 @@ $(document).ready(function(){
     </div>
 
 
+<!-- #changex ontent div -->
+
+
+
+
+
+<!-- #changex ontent div -->
 
   <div class='container'>
   <!--div class='container'-->
-<!-- #content div -->
     <!--   entersidebar heare-->
+<!-- #content div -->
+<!-- #content div -->
     
+      <div class='col-sm-3 sidebar-offcanvas' id="sidebar" role="navigation">
+        <h2>Sidebar</h2>
+        <ul class="nav nav-tabs nav-stacked">
+          <li><a href='#' onclick="load(0);">Home</a></li>
+          <li><a href='#pageBar' onclick="getSFeedTerm('nebula');">Look at restaurant</a></li>
+          <li><a href='#' onclick="getSectionO(0);">News</a></li>
+
+          <li><a href='#pageBar' onclick="getSectionLO(0);">Search l</a></li>
+          <li><a href='#pageBar' onclick="getSectionBlog(0);">Search </a></li>
+          <li><a href='#' onclick="getSectionInsertDB(0);">Insert DB</a></li>
+          <li><a href='#' onclick="getSectionDBB(0);">Search DB</a></li>
+          <li><a href='#' onclick="getSectionLogin(0);">Login</a></br><span id="cal2">&nbsp;</span></li>
+	  <li><a href='#'><span id="call">&nbsp;</span></a></li>
+        </ul>
+      </div>
+
     <!--div id='content' class='row row-offcanvas row-offcanvas-right'-->
       <div class='col-sm-9 main'>
         <!--h2>Main Content Section</h2-->
@@ -1177,24 +1201,8 @@ onsubmit="return valReservation(this)">
 <!--p id="dis">disapear</p-->
       
       </div><!--**************** END container ***********************-->
-      <div class='col-sm-3 sidebar-offcanvas' id="sidebar" role="navigation">
-        <h2>Sidebar</h2>
-        <ul class="nav nav-tabs nav-stacked">
-          <li><a href='#' onclick="load(0);">Home</a></li>
-          <li><a href='#pageBar' onclick="getSFeedTerm('nebula');">Look at restaurant</a></li>
-          <li><a href='#' onclick="getSectionO(0);">News</a></li>
 
-          <li><a href='#pageBar' onclick="getSectionLO(0);">Search l</a></li>
-          <li><a href='#pageBar' onclick="getSectionBlog(0);">Search </a></li>
-          <li><a href='#' onclick="getSectionInsertDB(0);">Insert DB</a></li>
-          <li><a href='#' onclick="getSectionDBB(0);">Search DB</a></li>
-          <li><a href='#' onclick="getSectionLogin(0);">Login</a></br><span id="cal2">&nbsp;</span></li>
-	  <li><a href='#'><span id="call">&nbsp;</span></a></li>
-        </ul>
-      </div>
-
-
-    <!--/div-->
+    <!--/. sidebar abovediv-->
 
 
   </div>
