--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
 
 
 <head>
-<title>StarAdvisor</title>
+<title>Food&Mood</title>
 <meta http-equiv="content-type" content="text/html; charset=ISO-8859-1"/>
 <link href="css/style.css" rel="stylesheet" type="text/css" title="starA">
 <link href="cf/theme/css/less-style.css" rel="stylesheet" type="text/css">
