--- a/public/index.html
+++ b/public/index.html
@@ -275,7 +275,7 @@ $(document).ready(function(){
           <li><a href="#tabs-2" onclick="listSites(0);"><span class="glyphicon glyphicon-pencil"> </span> Meal List Events</a></li>
           <li> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</li>
           <li> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</li>
-          <li><a href="#formstar" onclick="getSFeedTerm(4);" style="float:right;"><span class="glyphicon glyphicon-user"> Login/Sign-up</a></li>
+          <li><a href="#formstar" onclick="getSFeedTerm(4);" style="float:right;"><span class="glyphicon glyphicon-user"> Login/Sign--up</a></li>
 
         </ul>
       </div><!--nav-collapse-->
