--- a/public/index.html
+++ b/public/index.html
@@ -272,7 +272,7 @@ $(document).ready(function(){
       </div><!--head-->
       <div class='collapse navbar-collapse' >
         <ul class="nav navbar-nav">
-          <li class="active"><a href="#" onclick="load(0);"><span class="glyphicon glyphicon-leaf"></span> Home</a></li>
+          <li class="active"><a href="#" onclick="load(0);"><span class="glyphicon glyphicon-leaf"></span> Home+</a></li>
           <li><a href="#fieldT1" onclick="getSFeedTerm(2);"><span class="glyphicon glyphicon-glass"> </span>Choose Meal</a></li>
           <li><a href="#tabs-2" onclick="listSites(0);"><span class="glyphicon glyphicon-pencil"> </span> Meal List Events</a></li>
           <li> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</li>
