--- a/public/index.html
+++ b/public/index.html
@@ -300,7 +300,7 @@ $(document).ready(function(){
 <!-- #content div -->
 <!-- #content div -->
     
-      <div class='col-sm-3 sidebar-offcanvas' id="sidebar" role="navigation">
+      <div class='col-sm-3 sidebar-offcanvas' style="background:#b0ada5;" id="sidebar" role="navigation">
         <h2>I feel...</h2>
 	<ul class="nav nav-tabs nav-stacked"> 
 	  <li></li>
@@ -323,6 +323,23 @@ $(document).ready(function(){
           <li><a href='#' onclick="getSectionInsertDB(0);">Stressed</a></li>
 
 	</ul>
+
+
+        <h2>I am...</h2>
+	<ul class="nav nav-tabs nav-stacked"> 
+	  <li></li>
+
+
+
+          <li><a href='#pageBar' onclick="getSectionLO(0);"><img src="icx/expert.gif" class="image-responsive" alt="" width="80"/>Expert</a></li>
+          <li><a href='#pageBar' onclick="getSectionLO(0);"><img src="icx/interme.gif" class="image-responsive" alt="" width="80"/>   &nbsp; Intermediate </a></li>
+          <li><a href='#pageBar' onclick="getSectionLO(0);"><img src="icx/beginner.gif" class="image-responsive" alt="" width="80"/>Beginner</a></li>
+          <li><a href='#pageBar' onclick="getSectionLO(0);">Adventurous</a></li>
+          <li><a href='#pageBar' onclick="getSectionBlog(0);">Lazy </a></li>
+          <li><a href='#' onclick="getSectionInsertDB(0);">Stressed</a></li>
+
+	</ul>
+
 
         <ul class="nav nav-tabs nav-stacked">
           <li><a href='#' onclick="load(0);">Home</a></li>
