--- a/public/old_index.html
+++ b/public/old_index.html
@@ -318,6 +318,10 @@ $(document).ready(function(){
 	  <li></li>
 
 
+          <li><a href='#pageBar' onclick="getSectionLO(0);"><img src="images/1hr.gif" class="image-responsive" alt="" width="80"/>  &nbsp;One Hour</a></li>
+          <li><a href='#pageBar' onclick="getSectionLO(0);"><img src="images/2hr.gif" class="image-responsive" alt="" width="80"/>   &nbsp; 2 Hours </a></li>
+          <li><a href='#pageBar' onclick="getSectionLO(0);"><img src="images/5min.gif" class="image-responsive" alt="" width="80"/>5 minutes</a></li>
+
           <li><a href='#pageBar' onclick="getSectionLO(0);">Adventurous</a></li>
           <li><a href='#pageBar' onclick="getSectionBlog(0);">Lazy </a></li>
           <li><a href='#' onclick="getSectionInsertDB(0);">Stressed</a></li>
