--- a/public/q.html
+++ b/public/q.html
@@ -19,16 +19,16 @@
 		<center>
 		<table border="1" width="90%" style="border:3px dashed black;">
 			<tr>
-				 <td bgcolor="#8B795E" onclick="location.href='qtime.html';"><center><p style="font-family:courier;font-size:150%;">I Feel...<img src="icx/adven-icon.png" width="120"/></p></center></td>
+				 <td bgcolor="#8B795E" onclick="location.href='qtime.html?mood=lazy';"><center><p style="font-family:courier;font-size:150%;">I Feel...<img src="icx/adven-icon.png" width="120"/></p></center></td>
 			</tr>
 
 
 			<tr>
-				 <td bgcolor="#8B795E" onclick="location.href='qtime.html';"><center><p style="font-family:courier;font-size:150%;">I Feel...<img src="icx/lazy-icon.png" width="120"/></p></center></td>
+				 <td bgcolor="#8B795E" onclick="location.href='qtime.html?mood=lazy';"><center><p style="font-family:courier;font-size:150%;">I Feel...<img src="icx/lazy-icon.png" width="120"/></p></center></td>
 			</tr>
 
 			<tr>
-				 <td bgcolor="#8B795E" onclick="location.href='qtime.html';"><center><p style="font-family:courier;font-size:150%;">I Feel...<img src="icx/stressed-icon.png" width="120"/></p></center></td>
+				 <td bgcolor="#8B795E" onclick="location.href='qtime.html?mood=lazy';"><center><p style="font-family:courier;font-size:150%;">I Feel...<img src="icx/stressed-icon.png" width="120"/></p></center></td>
 			</tr>
 
 
