--- a/public/qtime.html
+++ b/public/qtime.html
@@ -7,6 +7,11 @@
 <script type="text/javascript" src="scripts/jquery.js"></script>
 <script type="text/javascript" src="scripts/quiz.js"></script>
 <script type="text/javascript" src="scripts/jquery.tools.min.js"></script>
+<script>
+	function redirectPage() {
+		location.href = 'qlevel.html' + location.search + '&time=2'
+	}
+</script>
 </head>
 <body style="background-image:url('../icx/3_rate_time_bg.png');">
 <div id="container">
@@ -19,16 +24,16 @@
 		<center>
 		<table border="1" width="90%" style="border:3px dashed black;">
 			<tr>
-				 <td bgcolor="#8B795E" onclick="location.href='qlevel.html';"><center><p style="font-family:courier;font-size:150%;">I have...<img src="images/1hr.gif" width="120"/></p></center></td>
+				 <td bgcolor="#8B795E" onclick="redirectPage()"><center><p style="font-family:courier;font-size:150%;">I have...<img src="images/1hr.gif" width="120"/></p></center></td>
 			</tr>
 
 
 			<tr>
-				 <td bgcolor="#8B795E" onclick="location.href='qlevel.html';"><center><p style="font-family:courier;font-size:150%;">I have ...<img src="images/2hr.gif" width="120"/></p></center></td>
+				 <td bgcolor="#8B795E" onclick="redirectPage()"><center><p style="font-family:courier;font-size:150%;">I have ...<img src="images/2hr.gif" width="120"/></p></center></td>
 			</tr>
 
 			<tr>
-				 <td bgcolor="#8B795E" onclick="location.href='qlevel.html';"><center><p style="font-family:courier;font-size:150%;">I have..<img src="images/5min.gif" width="120"/></p></center></td>
+				 <td bgcolor="#8B795E" onclick="redirectPage()"><center><p style="font-family:courier;font-size:150%;">I have..<img src="images/5min.gif" width="120"/></p></center></td>
 			</tr>
 
 
