--- a/public/qlevel.html
+++ b/public/qlevel.html
@@ -8,8 +8,10 @@
 <script type="text/javascript" src="scripts/quiz.js"></script>
 <script type="text/javascript" src="scripts/jquery.tools.min.js"></script>
 <script>
-	function redirectPage() {
-		location.href = 'randomRecipe' + location.search + '&expertise=1';
+	function redirectPage(lId) {
+		location.href = 'qrecipe.html' + location.search + '&expertise='+lId;
+
+//		location.href = 'randomRecipe' + location.search + '&expertise=1';
 	}
 </script>
 </head>
@@ -24,16 +26,16 @@
 		<center>
 		<table border="1" width="90%" style="border:3px dashed black;">
 			<tr>
-				 <td bgcolor="#8B795E" onclick="redirectPage()"><center><p style="font-family:courier;font-size:150%;">I'm Level...<img src="icx/expert.gif" width="120"/></p></center></td>
+				 <td bgcolor="#8B795E" onclick="redirectPage(1)"><center><p style="font-family:courier;font-size:150%;">I'm Level...<img src="icx/expert.gif" width="120"/></p></center></td>
 			</tr>
 
 
 			<tr>
-				 <td bgcolor="#8B795E" onclick="redirectPage()';"><center><p style="font-family:courier;font-size:150%;">I'm Level...<img src="icx/interme.gif" width="120"/></p></center></td>
+				 <td bgcolor="#8B795E" onclick="redirectPage(2)"><center><p style="font-family:courier;font-size:150%;">I'm Level...<img src="icx/interme.gif" width="120"/></p></center></td>
 			</tr>
 
 			<tr>
-				 <td bgcolor="#8B795E" onclick="redirectPage()"><center><p style="font-family:courier;font-size:150%;">I'm Level..<img src="icx/beginner.gif" width="120"/></p></center></td>
+				 <td bgcolor="#8B795E" onclick="redirectPage(3)"><center><p style="font-family:courier;font-size:150%;">I'm Level..<img src="icx/beginner.gif" width="120"/></p></center></td>
 			</tr>
 
 
