--- a/public/qtime.html
+++ b/public/qtime.html
@@ -8,8 +8,12 @@
 <script type="text/javascript" src="scripts/quiz.js"></script>
 <script type="text/javascript" src="scripts/jquery.tools.min.js"></script>
 <script>
-	function redirectPage() {
-		location.href = 'qlevel.html' + location.search + '&time=2'
+	function redirectPage(tId) {
+//		if (location.search != null){
+//		location.href = 'qlevel.html' + location.search + '&time=2';
+		location.href = 'qlevel.html' + location.search + '&time='+tId;
+//		}else{		alert('Error, starting over');
+//		location.href = 'q.html';}
 	}
 </script>
 </head>
@@ -24,16 +28,16 @@
 		<center>
 		<table border="1" width="90%" style="border:3px dashed black;">
 			<tr>
-				 <td bgcolor="#8B795E" onclick="redirectPage()"><center><p style="font-family:courier;font-size:150%;">I have...<img src="images/1hr.gif" width="120"/></p></center></td>
+				 <td bgcolor="#8B795E" onclick="redirectPage(1)"><center><p style="font-family:courier;font-size:150%;">I have...<img src="images/1hr.gif" width="120"/></p></center></td>
 			</tr>
 
 
 			<tr>
-				 <td bgcolor="#8B795E" onclick="redirectPage()"><center><p style="font-family:courier;font-size:150%;">I have ...<img src="images/2hr.gif" width="120"/></p></center></td>
+				 <td bgcolor="#8B795E" onclick="redirectPage(2)"><center><p style="font-family:courier;font-size:150%;">I have ...<img src="images/2hr.gif" width="120"/></p></center></td>
 			</tr>
 
 			<tr>
-				 <td bgcolor="#8B795E" onclick="redirectPage()"><center><p style="font-family:courier;font-size:150%;">I have..<img src="images/5min.gif" width="120"/></p></center></td>
+				 <td bgcolor="#8B795E" onclick="redirectPage(5)"><center><p style="font-family:courier;font-size:150%;">I have..<img src="images/5min.gif" width="120"/></p></center></td>
 			</tr>
 
 
