--- a/public/qlevel.html
+++ b/public/qlevel.html
@@ -9,9 +9,9 @@
 <script type="text/javascript" src="scripts/jquery.tools.min.js"></script>
 <script>
 	function redirectPage(lId) {
-		location.href = 'qrecipe.html' + location.search + '&expertise='+lId;
+//		location.href = 'qrecipe.html' + location.search + '&expertise='+lId;
 
-//		location.href = 'randomRecipe' + location.search + '&expertise=1';
+		location.href = 'randomRecipe' + location.search + '&expertise='+lId;
 	}
 </script>
 </head>
