--- a/public/q.html
+++ b/public/q.html
@@ -146,22 +146,115 @@ function getM()
 
 
 
-<li id="b3">
-    <a href="#" onclick="getM();">
-     <div class="imgAlign">	
-      <!--img src="icx/adven-icon.png"  /-->
-      <p>I feel</p>
-     </div>
-      <center><h2>Adventurous</h2></center>
-<center><p>I Feel...&nbsp;&nbsp;&nbsp;<img src="icx/adven-icon.png" width="140" style="margin-right:auto;"/></p></center>
-      <center><p>try something new</p></center>
-    </a><a href="#">button</a></li>
-<li id="b3"><a href="#" onclick="getM();">3</a><a href="#">button</a></li>
+<!--li id="b3"-->
+    <!--a href="#" onclick="getM();"-->
+     <!--div class="imgAlign"-->	
+
+      <!--p>I feel</p-->
+     <!--/div-->
+      <!--center><h2>Adventurous</h2></center-->
+<!--center><p>I Feel...&nbsp;&nbsp;&nbsp;<img src="icx/adven-icon.png" width="140" style="margin-right:auto;"/></p></center-->
+      <!--center><p>try something new</p></center-->
+    <!--/a><a href="#">button</a></li-->
+<!--li id="b3"><a href="#" onclick="getM();">3</a><a href="#">button</a></li-->
 
 
 
 </ul></center>
 </div>
+<center><h3 style="color:#008800;font-family: 'Droid Serif', serif; !important;">Popular Recomendations</h3></center>
+<center><table id="tableDBF" cellpadding="2" cellspacing="2" style="text-align: center;  color:rgb(5,5,5);" border="1" cellpadding="2" cellspacing="2">
+
+  <thead>
+    <tr>
+      <th>Mood</th>
+      <th>Main Ingred&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</th>
+      <th>Time</th>
+      <th>Skill Level&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</th>
+      <th>Curious?</th>
+    </tr>
+  </thead>
+
+
+  <tbody>
+    
+    
+    <tr>
+      <!-- FIRST, LAST fields -->
+
+      <td align="center" padding="2">Mood&nbsp;      <img src="icx/lazy-icon.png" width="80" />
+      </td>
+
+      <td >Main Ingred&nbsp;RSS
+      </td>
+      <!--End  FIRST, LAST fields -->
+      <td align="center" padding="2">Time&nbsp;      <img src="images/1hr.gif" width="80" />
+
+      </td>
+
+      <td >Level&nbsp;      <img src="icx/expert.gif" width="80" />
+
+      </td>
+      <td ><button id="dbR1" class="butdelc">Take a Look</button>
+      </td>
+
+
+
+    </tr>
+    <!--End HEADERS-------------------->
+
+    <!--Start ROWS--------------------->
+
+    <tr>
+
+      <td >&nbsp;
+
+      </td>
+      <td >&nbsp;
+      </td>
+
+      <td >&nbsp;
+
+      </td>
+      <td >&nbsp;
+      </td>
+      <td ><button id="dbR2" class="butdelc">Delete</button>&nbsp;
+      </td>
+
+
+
+    </tr>
+<!-- Second row------------->
+    <tr>
+
+      <td >&nbsp;
+
+      </td>
+      <td >&nbsp;
+      </td>
+
+      <td >&nbsp;
+
+      </td>
+      <td >&nbsp;
+      </td>
+      <td ><button id="dbR3" class="butdelc">Delete</button>&nbsp;
+      </td>
+
+
+
+    </tr>
+
+
+<!--End Second row------------->
+
+      </tbody>
+</table>
+
+</center>
+
+
+
 
 <div data-role="footer" style="background-image:url('icx/2_Rate_Mood_bg.png');">
 
