--- a/public/q.html
+++ b/public/q.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta http-equiv="content-type" content="text/html; charset=ISO-8859-1">
-<meta name="viewport" id="viewport" content="width=device-width, height=device-height, user-scalable=no" />
+<meta name="viewport" id="viewport" content="width=device-width, height=device-height" />
 
 <title>FoodyMoodie</title>
 
