--- a/public/q.html
+++ b/public/q.html
@@ -170,9 +170,9 @@ function getM()
   <thead>
     <tr>
       <th data-priority="1">Mood</th>
-      <th data-priority="5">Main Ingred&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</th>
+      <th data-priority="5">Ingred&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</th>
       <th data-priority="3">Time</th>
-      <th data-priority="4">Skill Level&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</th>
+      <th data-priority="4">Skill&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</th>
       <th  data-priority="2">Curious?</th>
     </tr>
   </thead>
@@ -184,17 +184,17 @@ function getM()
     <tr>
       <!-- FIRST, LAST fields -->
 
-      <td align="center" padding="2">Mood&nbsp;      <img src="icx/lazy-icon.png" width="60" />
+      <td align="center" padding="2">&nbsp;      <img src="icx/lazy-icon.png" width="60" />
       </td>
 
-      <td >Main Ingred&nbsp;RSS
-      </td>
+      <td >RSS      </td>
+      <!--td >Main Ingred&nbsp;RSS      </td-->
       <!--End  FIRST, LAST fields -->
-      <td align="center" padding="2">Time&nbsp;      <img src="images/1hr.gif" width="60" />
+      <td align="center" padding="2">&nbsp;      <img src="images/1hr.gif" width="60" />
 
       </td>
 
-      <td >Level&nbsp;      <img src="icx/expert.gif" width="60" />
+      <td >&nbsp;      <img src="icx/expert.gif" width="60" />
 
       </td>
       <td ><button id="dbRF1" class="butdelc">Yes</button>
