--- a/public/q.html
+++ b/public/q.html
@@ -170,9 +170,9 @@ function getM()
   <thead>
     <tr>
       <th data-priority="1">Mood</th>
-      <th data-priority="5">Ingred&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</th>
+      <th data-priority="5">Ingred</th>
       <th data-priority="3">Time</th>
-      <th data-priority="4">Skill&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</th>
+      <th data-priority="4">Skill</th>
       <th  data-priority="2">Curious?</th>
     </tr>
   </thead>
@@ -187,7 +187,8 @@ function getM()
       <td align="center" padding="2">&nbsp;      <img src="icx/lazy-icon.png" width="60" />
       </td>
 
-      <td >RSS      </td>
+      <td padding="2">&nbsp;
+	RSS</td>
       <!--td >Main Ingred&nbsp;RSS      </td-->
       <!--End  FIRST, LAST fields -->
       <td align="center" padding="2">&nbsp;      <img src="images/1hr.gif" width="60" />
