--- a/public/q.html
+++ b/public/q.html
@@ -188,7 +188,7 @@ function getM()
       </td>
 
       <td padding="2">&nbsp;
-	RSS</td>
+	RSS, peppers, onions and cheese and oil.</td>
       <!--td >Main Ingred&nbsp;RSS      </td-->
       <!--End  FIRST, LAST fields -->
       <td align="center" padding="2">&nbsp;      <img src="images/1hr.gif" width="60" />
