--- a/public/q.html
+++ b/public/q.html
@@ -82,8 +82,8 @@ function getM()
 <div data-role="page" style="background-image:url('icx/2_Rate_Mood_bg.png');">
 <div data-role="header" style="background-image:url('icx/2_Rate_Mood_bg.png');">
 
-	<div id="title">
-		<center><img src = "icx/moodyfoodie-logo.png"></center>
+	<div id="title" >
+		<center><img src = "icx/mflo.png" ></center>
 
 	</div>
 
