--- a/public/qstime.html
+++ b/public/qstime.html
@@ -145,7 +145,7 @@ function getM()
 <div data-role="header" style="background-image:url('icx/3_rate_time_bg.png');">
 
 	<div id="title">
-		<center><img src = "icx/moodyfoodie-logo.png"></center>
+		<center><img src = "icx/mflo.png"></center>
 
 	</div>
 
