--- a/public/qstime.html
+++ b/public/qstime.html
@@ -137,6 +137,92 @@ function getM()
 
 
 </script>
+
+
+<script>
+
+$(document).ready(function(){
+
+var query=window.location.href.split('?')[1];
+var queryat = query.split('&');
+var backG = new Array();
+
+backG= ['icx/4_rate_skill_bg.png','icx/recipe_page05background.png','icx/3_rate_time_bg.png'];
+var ranG = Math.floor(Math.random()*backG.length);
+
+
+
+
+
+levels=['unspecified','expert','intermediate','beginner'];
+times=['unspecified','One+ hours','2+ hours','5+ minutes'];
+moods=['unspecified','Adventurous','Lazy','Stressed'];
+var pair = new Array();
+var lenq =  queryat.length;
+var pairs={};
+//
+
+//$('div[data-role=header]').css({background-image:url('icx/3_rate_time_bg.png')});
+//$('div[class*=qww]').css({background-image:url('icx/3_rate_time_bg.png')});
+//$("div[class*=qww]").css({background-color:'#888888'});
+//$(".qww1").css({background-color:"#888888"});
+//$(".qww1").html("<p>OoOo</p>").css({background:"#777777",textAlign:"center"});
+//$("div[class*=qww1]").html("<p>OoOo</p>").css({background:"#777777",textAlign:"center",font:"25px Helvetica, Arial, Sans-Serif, black",fontSize:"250%",color:"black"}).css('color','red');
+//$("div[class*=qww1]").css({background:"#007777",textAlign:"center"});
+
+
+
+//--not needed--$("div[class*=qww1]").css({background:"url("+backG[ranG]+")",textAlign:"center"});
+//$('div[class*=qww]').css({background-color:'yellow'});
+
+if (query != null) {
+  if (lenq > 0)
+  {
+	for (var l =0; l< queryat.length;l++){
+		pair=queryat[l].split('=');
+		pairs[pair[0]]=pair[1];
+	}
+  }
+  else
+  {
+	pair[0]=query.split('=')[0];
+	pair[1]=query.split('=')[1];
+  }
+
+}
+else {
+pair=['level','expert0'];
+
+}
+
+//alert("ready"+query+pair[0].toString()+levels[2].toString());
+//alert("ready"+query+pair[0].toString());
+
+//document.getElementById("titleU").innerHTML="<center><p style=\"color:red;font-size=180%;!important;\">"+levels[pairs['expertise']].toString()+"Level</p></center>";
+var levLen=levels[pairs['expertise']].length;
+var timeLen=times[pairs['time']].length;
+var lev=levels[pairs['expertise']].toString().substr(0,1).toUpperCase()+levels[pairs['expertise']].toString().substr(1,levLen);
+//$("#titleU").html("<center><p style=\"color:orange;font-size=180%;!important;\">"+levels[pairs['expertise']].toString()+"Level"+lev.toString()+"</p></center><br>").css({fontSize:"180%"});
+$("#titleU").append("<h2>"+" For the: "+moods[pairs['mood']].toString()+" </h2>");
+//$("#titleU").append("<h2>"+" For the: "+moods[pairs['mood']].toString()+" Level: "+lev.toString()+"</h2>");
+//$("#titleU").append("<h2>"+"You have: "+times[pairs['time']].toString()+"</h2>");
+//$("#titleU").append("<center><p style=\"color:orange;font-size=180%;!important;\">"+"You have: "+times[pairs['time']].toString()+"</p></center><br>").css({fontSize:"100%"});
+
+
+});
+
+
+
+
+
+	function reload() {
+		location.reload() 	;
+	}
+</script>
+
+
+
+
 </head>
 <body onload="load(0);" style="background-image:url('icx/3_rate_time_bg.png');"  >
 
@@ -149,6 +235,9 @@ function getM()
 
 	</div>
 
+        <div class="recipeInfo" id="titleU"></div>
+		<!--h2>WOULD YOU LIKE TO COOK THIS?</h2-->
+	<div>
 
 
 <div class="ui-bar ui-bar-b"  style="font-family: 'Droid Serif', serif; !important;">
