--- a/public/qstime.html
+++ b/public/qstime.html
@@ -196,19 +196,22 @@ pair=['level','expert0'];
 }
 
 //alert("ready"+query+pair[0].toString()+levels[2].toString());
-//alert("ready"+query+pair[0].toString());
+alert("ready"+query+pair[0].toString());
 
 //document.getElementById("titleU").innerHTML="<center><p style=\"color:red;font-size=180%;!important;\">"+levels[pairs['expertise']].toString()+"Level</p></center>";
-var levLen=levels[pairs['expertise']].length;
+/*var levLen=levels[pairs['expertise']].length;
 var timeLen=times[pairs['time']].length;
 var lev=levels[pairs['expertise']].toString().substr(0,1).toUpperCase()+levels[pairs['expertise']].toString().substr(1,levLen);
-//$("#titleU").html("<center><p style=\"color:orange;font-size=180%;!important;\">"+levels[pairs['expertise']].toString()+"Level"+lev.toString()+"</p></center><br>").css({fontSize:"180%"});
-$("#titleU").append("<h2>"+" For the: "+" </h2>");
-//$("#titleU").append("<h2>"+" For the: "+moods[pairs['mood']].toString()+" </h2>");
-//$("#titleU").append("<h2>"+" For the: "+moods[pairs['mood']].toString()+" Level: "+lev.toString()+"</h2>");
-//$("#titleU").append("<h2>"+"You have: "+times[pairs['time']].toString()+"</h2>");
-//$("#titleU").append("<center><p style=\"color:orange;font-size=180%;!important;\">"+"You have: "+times[pairs['time']].toString()+"</p></center><br>").css({fontSize:"100%"});
+*/
 
+/*$("#titleU").html("<center><p style=\"color:orange;font-size=180%;!important;\">"+levels[pairs['expertise']].toString()+"Level"+lev.toString()+"</p></center><br>").css({fontSize:"180%"});
+*/
+$("#titleU").append("<h2>"+" For the: "+" </h2>");
+/*$("#titleU").append("<h2>"+" For the: "+moods[pairs['mood']].toString()+" </h2>");
+$("#titleU").append("<h2>"+" For the: "+moods[pairs['mood']].toString()+" Level: "+lev.toString()+"</h2>");
+$("#titleU").append("<h2>"+"You have: "+times[pairs['time']].toString()+"</h2>");
+$("#titleU").append("<center><p style=\"color:orange;font-size=180%;!important;\">"+"You have: "+times[pairs['time']].toString()+"</p></center><br>").css({fontSize:"100%"});
+*/
 
 });
 
