--- a/public/q.html
+++ b/public/q.html
@@ -46,6 +46,12 @@
 <script type="text/javascript" src="scripts/script.js"></script>
 <script type="text/javascript" >
 
+
+$(document).ready(function(){
+	readFood(1);
+
+});
+
 	function redirectPage(mId) {
 //		if (location.search != null){
 //		location.href = 'qlevel.html' + location.search + '&time=2';
