--- a/public/updoc.html
+++ b/public/updoc.html
@@ -1,12 +1,15 @@
+<!DOCTYPE html>
 <html>
 <head>
-<meta http-equiv='Content-Type' content='text/html;charset=UTF-8'>
+	<meta http-equiv='Content-Type' content='text/html;charset=UTF-8'>
 </head>
 
 <body>
 <form action='/upload' enctype='multipart/form-data' method='post'>
+	<p>
 	<input type='file' name='upload'></input>
 	<input type='submit' value='Upload file'></input>
+	</p>
 </form>
 </body>
 
