--- a/public/updoc.html
+++ b/public/updoc.html
@@ -7,7 +7,7 @@
 <body>
 <form action='/upload' enctype='multipart/form-data' method='post'>
 	<p>
-	<input type='file' name='upload'></input>
+	<input type='file' name='image'></input>
 	<input type='submit' value='Upload file'></input>
 	</p>
 </form>
