--- a/public/q.html
+++ b/public/q.html
@@ -169,7 +169,7 @@ function getM()
 
 </ul></center>
 </div>
-<center><h3 style="color:#008800;font-family: 'Droid Serif', serif; !important;">Popular Recomendations</h3></center>
+<center><h3 id="hqht" style="color:#008800;font-family: 'Droid Serif', serif; !important;">Popular Recomendations</h3></center>
 <center>
 <!--table id="tableDBF" cellpadding="2" cellspacing="2" style="text-align: center;  color:rgb(5,5,5);" border="1" cellpadding="2" cellspacing="2"-->
 <table id="tableDBF" style="text-align: center;  color:rgb(5,5,5);" data-role="table" data-mode="columntoggle" class="ui-responsive">
